--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Multilingual Dataset Survey"
 title_separator          : "-"
 name                     : &name "Multilingual Dataset Survey"
 description              : &description "personal description"
-url                      : www.multilingual-dataset-survey.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://multilingual-dataset-survey.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "velocityCavalry/multilingual-dataset-survey"
+repository               : "multilingual-dataset-survey/multilingual-dataset-survey.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
