--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Multilingual Dataset Survey"
 title_separator          : "-"
 name                     : &name "Multilingual Dataset Survey"
 description              : &description "personal description"
-url                      : "https://multilingual-dataset-survey.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://academicpages.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "multilingual-dataset-survey.io"
+repository               : "multilingual-dataset-survey.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -29,7 +29,7 @@ comments:
   facebook:
     appid                :
     num_posts            : # 5 (default)
-    colorscheme          : # "light" (default), "dark"
+    colorscheme          : # "light" (default), "dark" 
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
