--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /talks/    
 
   - title: "Full Survey"
-    url: /teaching/    
+    url: /full-survey/ 
         
   - title: "Updates"
     url: /year-archive/
