--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /database/
 
   - title: "Add Dataset"
-    url: /talks/    
+    url: https://forms.gle/fkYAvNUXyqTAZQoB9 
 
   - title: "Full Survey"
     url: /full-survey/ 
